--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -18,6 +18,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 20px 0px;
 }
 .mainHeader h3{
   color: var(--text2);
@@ -37,4 +38,32 @@
   align-items: center;
   gap: 10px;
   color: var(--primary);
+}
+
+.gridCards{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, auto);
+  gap: 40px;
+  padding: 10px;
+}
+.imageCard{
+  width: 100%;
+  height: 200px;
+  border-bottom: 4px solid var(--primary);
+  cursor: pointer;
+}
+.imageCard:hover{
+  opacity: 50%;
+}
+.footerCard{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 10px 0px;
+  font-weight: 800;
+  font-size: large;
+}
+.favoriteIcon{
+  cursor: pointer;
 }
