--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,28 +39,11 @@ h5{
 #container{
   width: 1024px;
   margin: auto;
+  min-height: 100vh;
 }
 
-#searchInputContainer{
-  display: flex;
-  align-items: center;
-  gap: 5%;
-  width: 80%;
-  background-color: var(--secondary);
-  padding: 15px 20px;
-  border-radius: 40px;
-  margin: 40px 0px;
-}
-#searchInput{
-  width: 100%;
-  border: none;
-  background-color: transparent;
-}
-#searchInput::placeholder {
-  color: var(--primary);
-  opacity: 50%;
-  font-weight: 600;
-}
-#searchInput:focus{
-  outline: none;
+#footer{
+  background-color: var(--primary);
+  height: 50px;
+  margin-top: 100px;
 }
